--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,48 @@
+.dropbtn {
+  background-color: #fcab4f;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  width: 160px;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #da8506;
+  border: none;
+}
+
+.dropdown {
+  /* position: fixed; */
+  display: inline-block;
+  /* left: 30vw; */
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #fcab4f;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 999;
+  overflow: visible;
+  cursor: pointer;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  white-space: nowrap;
+
+}
+
+.dropdown a:hover {background-color: #fff;}
+
+.show {display: block;}
 #popup {
     overflow-x: hidden;
     position: absolute;
@@ -50,13 +95,14 @@
 
 /* The navigation bar */
 .navbar {
-    overflow: hidden;
+    overflow: visible;
     background-color: rgb(255, 255, 255);
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
     left: 0;
     padding-left: 20px;
     width: 100%; /* Full width */
+    height: 90px;
     z-index: 999;
 }
 
